Fixed spacing

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     height: 100%; 
     margin: 0; 
     padding: 0;
-    background-color: #1abc9c;
 }
 
 #wrapper {
@@ -41,6 +40,7 @@ h2 {
 }
 
 #section1 {
+	position: absolute;
 	width: 50%;
 	height: auto;
 }
